--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.telegram:telegrambots:6.5.0'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
