--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,42 @@
-.idea/*
-build/*
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+.gitignore
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
 *.iml
-out/*
-.gradle/*
-target/*
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+in/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
+
+### secrets ###
+application-secret.yml
