"JRBT-13: added functionality command"

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 bot:
-  username: secret
-  token: secret
+  username: username
+  token: token
 
 spring:
   profiles:
     active:
       - secret
+      - local
