--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,6 +23,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Set up MySQL
+      uses: mirromutth/mysql-action@v1.1
+      with:
+        mysql version: '5.7'
+        mysql database: 'dev_proba_db'
+        mysql root password: 'root'
+        mysql user: 'letmein'
+        mysql password: 'letmein'
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
