--- a/src/test/resources/application-test_prod.yml
+++ b/src/test/resources/application-test_prod.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://dev_proba_db:3306/proba_db?useUnicode=yes&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/dev_proba_db?useUnicode=yes&characterEncoding=UTF-8
     username: letmein
     password: letmein
     driver-class-name: com.mysql.jdbc.Driver
